updated for biz

--- a/src/components/sections/AboutMe.astro
+++ b/src/components/sections/AboutMe.astro
@@ -5,24 +5,24 @@ import Card from '../Card.astro'
 <Card colSpan="md:col-span-1" rowSpan="md:row-span-6" title="About me">
   <div class="flex flex-col gap-2">
     <p class="text-sm font-light">
-      Hi, I'm Andrés, a fullstack software developer from Colombia 🇨🇴.
+      Hi, I'm Brodie, a product manager from Birmingham 🏈.
       <br />
       <br />
-      My primary tools of choice includes:
+      My primary tools of choice include:
       <ul class="list-inside list-disc">
-        <li>JavaScript</li>
-        <li>React</li>
+        <li>Figma</li>
+        <li>Mixpanel</li>
+        <li>Google Docs</li>
+        <li>Flutterflow</li>
+        <li>Cursor</li>
         <li>Astro</li>
-        <li>Python</li>
-        <li>Php</li>
-        <li>Mongo</li>
-        <li>SQL</li>
-        <li>Nodejs</li>
+        <li>Tailwind</li>
+        <li>AI</li>
       </ul>
     </p>
     <p class="text-sm font-light">
-      Beyond coding, I'm passionate about tattoo, soccer and traveling. An
-      unusual hobby of mine is play classical music in the guitar or ukulele.
+      Beyond products, I'm passionate about sports (Roll tide!), finance, and being outdoors. I've recently taken up golf and am learning to code. 
     </p>
+    <p class="text-sm font-light">P.S. I built this site!</p>
   </div>
 </Card>
