--- a/src/components/sections/ContactsCard.astro
+++ b/src/components/sections/ContactsCard.astro
@@ -7,13 +7,13 @@ import { LINKS } from '../../lib/constants'
   <div class="h-full">
     <header class="flex items-center">
       <h1 class="text-xl font-bold text-foreground">
-        Let's start working together!
+        Let's work together!
       </h1>
     </header>
     <address class="mt-4 flex flex-col">
       <h2 class="text-gray-500">Contact Details</h2>
-      <p>camiloplaza3@gmail.com</p>
-      <p>🇨🇴 Bogotá D.C, Colombia 🇨🇴</p>
+      <p>bhelms@redmontdigital.com</p>
+      <p>🌊 Fairhope, Alabama 🌳</p>
     </address>
     <div class="mt-4 flex w-fit flex-col">
       <h2 class="text-gray-500">Socials</h2>
