--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -11,10 +11,9 @@ import { Linkedin, Github, Mail } from 'lucide-react'
       <div class="flex h-full flex-col">
         <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
         <p class="m-0 text-xl font-light">
-          Hi, I'm <b class="font-bold">Andrés Camilo Plaza</b>, a software
-          developer, systems engineer and tattoo artist with strong focus on the
-          user experience, animations and micro interactions. I love to create
-          beautiful and functional interfaces, I am passionate about technology
+          Hi, I'm <b class="font-bold">Hunter Brodie Helms</b>, a product manager, entrepreneur, and sports enthusiast with a strong focus on
+          user experience, growth, and 0-1 product development. I love to create
+          beautiful and functional products, I am passionate about technology
           and I am always looking for new challenges.
         </p>
       </div>
@@ -42,7 +41,7 @@ import { Linkedin, Github, Mail } from 'lucide-react'
     <img
       width="300"
       height="300"
-      src="/me.png"
+      src="/me2.png"
       class="pointer-events-none absolute bottom-[-20px] right-[-110px] z-[-1] max-h-[300px] w-auto select-none opacity-50 md:relative md:bottom-auto md:right-auto md:z-auto md:opacity-100"
       alt="memoji of andres plaza"
     />
