--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,8 +38,8 @@ import { motion, AnimatePresence } from 'framer-motion'
 </script>
 
 <BaseLayout
-  title="Andrés Plaza - Full Stack Developer"
-  description="Andrés Plaza - Full Stack Developer - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
+  title="Brodie Helms - Product Manager"
+  description="Brodie Helms - Product Manager - Portfolio, Projects, CV, About Me, Contact, Timezone, Now, Experience, Tattoo, Study"
 >
   <div
     slot="loader"
@@ -65,9 +65,9 @@ import { motion, AnimatePresence } from 'framer-motion'
     <Card colSpan="md:col-span-1" rowSpan="md:row-span-1">
       <div class="flex h-full flex-col justify-between">
         <blockquote class="mt-6 border-l-2 pl-6 italic">
-          “Anything one man can imagine, other men can make real.”
+          “The people who are crazy enough to think they can change the world are the ones who do.”
         </blockquote>
-        <p class="mt-2 text-xs">- Jules Verne</p>
+        <p class="mt-2 text-xs">- Steve Jobs</p>
       </div>
     </Card>
     <TattooCard />
