--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,14 +7,14 @@
     >
       Built by{' '}
       <a
-        href="https://github.com/HunterHelms"
+        href="https://redmontdigital.com"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4"
       >
-        BUE221
+        Redmont Digital
       </a>
-      . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS. The
+       with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS. The
       source code is available on{' '}
       <a
         href="https://github.com/HunterHelms/astro-portfolio"
