--- a/src/components/sections/IntroCard.astro
+++ b/src/components/sections/IntroCard.astro
@@ -9,12 +9,11 @@ import { Linkedin, Github, Mail } from 'lucide-react'
   <div class="flex h-full w-full">
     <div class="flex flex-col justify-between gap-4 md:max-h-[300px]">
       <div class="flex h-full flex-col">
-        <h6 class="m-0 text-sm font-light text-gray-500">welcome</h6>
+        <h6 class="m-0 text-sm font-light text-gray-500">Welcome</h6>
         <p class="m-0 text-xl font-light">
-          Hi, I'm <b class="font-bold">Hunter Brodie Helms</b>, a product manager, entrepreneur, and sports enthusiast with a strong focus on
-          user experience, growth, and 0-1 product development. I love to create
-          beautiful and functional products, I am passionate about technology
-          and I am always looking for new challenges.
+          Hello, I'm <b class="font-bold">Hunter Brodie Helms</b>, a product manager, entrepreneur, and sports enthusiast with a passion for creating beautiful and functional products.
+          I specialize in user experience, growth, and 0-1 product development. I 
+          am a quick learner and am always looking for new challenges.
         </p>
       </div>
       <div class="flex gap-4">
