--- a/src/components/sections/Now.astro
+++ b/src/components/sections/Now.astro
@@ -8,11 +8,11 @@ import Pulse from '../Pulse.astro'
     <div class="flex flex-col">
       <h2>Now</h2>
       <a href="https://sive.rs/nowff" target="_blank">
-        <span class="cursor-pointer text-xs text-gray-500">What I am up to</span>
+        <span class="cursor-pointer text-xs text-gray-500">What I am up to:</span>
       </a>
     </div>
     <Pulse />
   </div>
-  <p class="text-xs">- Currently working as product manager at FIXD Automotive</p>
+  <p class="text-xs">- Product manager at FIXD</p>
   <p class="text-xs">- Founder of Redmont Digital</p>
 </Card>
