--- a/src/components/sections/TattooCard.astro
+++ b/src/components/sections/TattooCard.astro
@@ -21,7 +21,7 @@ import { LINKS } from '../../lib/constants'
     </div>
     <div>
       <p class="mt-2 text-sm text-muted-foreground">
-        If you want to check out my latest project, you might score a free meal in the process!
+        Check out my latest project, you might score a free meal in the process!
       </p>
     </div>
   </div>
